@@ -1,4 +1,8 @@
-pkglib_LTLIBRARIES = HwPerturbativeDecay.la
+pkglib_LTLIBRARIES = HwPerturbativeDecay.la HwTopDecay.la
 HwPerturbativeDecay_la_SOURCES = \
  SMWZDecayer.cc  SMWZDecayer.fh  SMWZDecayer.h  SMWZDecayer.icc
 HwPerturbativeDecay_la_LDFLAGS = -module
+
+HwTopDecay_la_SOURCES = SMTopDecayer.cc SMTopDecayer.fh SMTopDecayer.h \
+ SMTopDecayer.icc
+HwTopDecay_la_LDFLAGS = -module
